Add JaCoCo for code coverage and set up CI workflow with Codecov integration. Update integration tests to use URI for URL creation.